# openGL

./: CMakeLists.txt  README.md
dependecies/glad/: glad.h
src/: config.h  glad.c  main.cpp
